tests/golden/errors/c_style_call.stderr
error[formatting]: canonical form requires exactly one space here
  --> c_style_call.kso:1:6
   1 | print("hi")
            ^
